chore: prepare release v0.1.0
- Add MIT License for open source distribution
- Update pyproject.toml with license information
- Add comprehensive CHANGELOG.md documenting all features
- Update README.md with proper license section
- Version 0.1.0 ready for release with complete feature set

Release highlights:
- Complete Redmine MCP server implementation
- 20-test comprehensive testing framework
- Docker containerization with security hardening
- Modern Python project structure with uv
- Git Flow workflow with proper branching
- Comprehensive documentation and examples
- MIT License for open source distribution

Ready for Git Flow release finish.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "mcp-redmine"
 version = "0.1.0"
 description = "A Model Context Protocol (MCP) server for Redmine integration"
 readme = "README.md"
+license = {text = "MIT"}
 requires-python = ">=3.13"
 dependencies = [
     "python-dotenv>=1.0.0",
