Read host and port from environment

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,5 @@ REDMINE_PASSWORD=your_password
 # REDMINE_API_KEY=your_api_key
 
 # Server configuration
-SERVER_HOST=0.0.0.0
-SERVER_PORT=8000
+SERVER_HOST=0.0.0.0  # Default host
+SERVER_PORT=8000     # Default port
