- cicd: run test with --verbose

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          python tests/run_tests.py --all
+          python tests/run_tests.py --all --verbose
