Add health endpoint and update Docker health checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     networks:
       - redmine-mcp-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/messages/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
