--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,16 @@ REDMINE_PASSWORD=your_password
 # Server configuration
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
+
+# Public URL configuration for file serving
+# External hostname/IP for generated download URLs
+PUBLIC_HOST=localhost
+PUBLIC_PORT=8000
+
+# File Management (Optional)
+# Directory where downloaded attachments are stored
+ATTACHMENTS_DIR=./attachments
+
+# Automatic cleanup configuration
+AUTO_CLEANUP_ENABLED=true
+CLEANUP_INTERVAL_HOURS=1
