feat: implement automatic attachment cleanup with configurable intervals
- Add automatic cleanup task with configurable intervals (CLEANUP_INTERVAL_MINUTES)
- Add configurable attachment expiry time (ATTACHMENT_EXPIRES_MINUTES)
- Implement lazy initialization of cleanup task via MCP tool calls
- Add health check endpoint integration for cleanup initialization
- Add cleanup status endpoint (/cleanup/status) for monitoring
- Update environment configuration with minute-based intervals
- Enhance README with detailed file management configuration examples

--- a/.env.example
+++ b/.env.example
@@ -27,4 +27,7 @@ ATTACHMENTS_DIR=./attachments
 
 # Automatic cleanup configuration
 AUTO_CLEANUP_ENABLED=true
-CLEANUP_INTERVAL_HOURS=1
+CLEANUP_INTERVAL_MINUTES=10
+
+# Default expiry time for downloaded attachments (in minutes)
+ATTACHMENT_EXPIRES_MINUTES=60
