ci: add workflow triggers for feature branches and manual dispatch
- Add push trigger for feature/* branches
- Add workflow_dispatch for manual GitHub UI runs
- Scope pull request trigger to develop branch

(cherry picked from commit 143ebce43ee45f0c79936c4419c777ba7e7bdb10)

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -2,6 +2,14 @@ name: CI
 
 on:
   pull_request:
+    branches:
+      - develop
+
+  push:
+    branches:
+      - feature/*
+      
+  workflow_dispatch:  # 👈 allows manual run from GitHub UI
 
 jobs:
   test:
