--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - feature/*
+      - release/*
+      - hotfix/*
       
   workflow_dispatch:  # 👈 allows manual run from GitHub UI
 
