--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,26 @@
 [project]
-name = "mcp-redmine"
-version = "0.4.1"
-description = "A Model Context Protocol (MCP) server for Redmine integration"
+name = "redmine-mcp-server"
+version = "0.4.2"
+description = "Production-ready MCP server for Redmine with security, pagination, and enterprise features"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.13"
+keywords = ["redmine", "mcp", "model-context-protocol", "project-management", "server"]
+authors = [
+    {name = "Kevin Tan", email = "jingzheng.tan@gmail.com"}
+]
+maintainers = [
+    {name = "Kevin Tan", email = "jingzheng.tan@gmail.com"}
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Office/Business :: Groupware",
+]
 dependencies = [
     "python-dotenv>=1.0.0",
     "fastapi[standard]>=0.115.12",
@@ -12,6 +28,15 @@ dependencies = [
     "python-redmine>=2.5.0",
     "uvicorn>=0.24.0",
 ]
+
+[project.urls]
+Homepage = "https://github.com/jztan/redmine-mcp-server"
+Repository = "https://github.com/jztan/redmine-mcp-server.git"
+Issues = "https://github.com/jztan/redmine-mcp-server/issues"
+Changelog = "https://github.com/jztan/redmine-mcp-server/blob/main/CHANGELOG.md"
+
+[project.scripts]
+redmine-mcp-server = "redmine_mcp_server.main:main"
 
 [project.optional-dependencies]
 test = [
@@ -30,3 +55,7 @@ dev = [
     "flake8>=6.0.0",
     "black>=23.0.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
