--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "redmine-mcp-server"
-version = "0.4.5"
+version = "0.5.0"
 description = "Production-ready MCP server for Redmine with security, pagination, and enterprise features"
 readme = "README.md"
 license = {text = "MIT"}
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 keywords = ["redmine", "mcp", "model-context-protocol", "project-management", "server"]
 authors = [
     {name = "Kevin Tan", email = "jingzheng.tan@gmail.com"}
@@ -17,6 +17,9 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Office/Business :: Groupware",
@@ -33,7 +36,7 @@ dependencies = [
 Homepage = "https://github.com/jztan/redmine-mcp-server"
 Repository = "https://github.com/jztan/redmine-mcp-server.git"
 Issues = "https://github.com/jztan/redmine-mcp-server/issues"
-Changelog = "https://github.com/jztan/redmine-mcp-server/blob/main/CHANGELOG.md"
+Changelog = "https://github.com/jztan/redmine-mcp-server/blob/master/CHANGELOG.md"
 
 [project.scripts]
 redmine-mcp-server = "redmine_mcp_server.main:main"
