feat(ssl): add SSL certificate configuration support
Add comprehensive SSL certificate configuration to support self-signed
certificates, internal CAs, and mutual TLS authentication.

Changes:
- Add REDMINE_SSL_VERIFY environment variable (default: true)
- Add REDMINE_SSL_CERT for custom CA certificate paths
- Add REDMINE_SSL_CLIENT_CERT for mutual TLS with client certificates
- Implement certificate file validation (exists, is_file checks)
- Add path resolution with symlink support
- Support both single file and cert+key tuple formats for client certs
- Replace print() with logger.error() for error handling
- Add warning/info logs for SSL configuration status
- Update .env.example with SSL configuration documentation

Resolves #31

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,19 @@ CLEANUP_INTERVAL_MINUTES=10
 
 # Default expiry time for downloaded attachments (in minutes)
 ATTACHMENT_EXPIRES_MINUTES=60
+
+# SSL Certificate Configuration (Optional)
+# Enable/disable SSL certificate verification (default: true)
+# WARNING: Only set to false for development/testing environments!
+REDMINE_SSL_VERIFY=true
+
+# Path to custom CA certificate file for self-signed certificates
+# Supports .pem, .crt, .cer formats
+# Example: REDMINE_SSL_CERT=/path/to/ca-bundle.crt
+# REDMINE_SSL_CERT=
+
+# Client certificate for mutual TLS authentication
+# Single file: REDMINE_SSL_CLIENT_CERT=/path/to/client.pem
+# Separate cert and key: REDMINE_SSL_CLIENT_CERT=/path/to/cert.pem,/path/to/key.pem
+# Note: Private keys must be unencrypted
+# REDMINE_SSL_CLIENT_CERT=
