test(ssl): add test certificates for CI/CD
Add SSL test certificates to repository for integration testing in CI:

- CA certificate and key for test certificate authority
- Server certificate and key for server SSL testing
- Client certificate and key for mutual TLS testing
- Combined client certificate for single-file mTLS testing

These are test-only certificates generated with OpenSSL, safe to commit.
Updated .gitignore to allow committing test certificates while still
ignoring certificate signing requests and serial files.

--- a/tests/fixtures/ssl/.gitignore
+++ b/tests/fixtures/ssl/.gitignore
@@ -1,4 +1,6 @@
-# Ignore test certificates (regenerate with openssl as needed)
-*.pem
+# Ignore certificate signing requests and serial files
 *.srl
 *.csr
+
+# Test certificates are committed for CI/CD
+# These are NOT real certificates - safe to commit
