fix(security): remove private keys from repo, generate certs in CI
- Remove static SSL test certificates that triggered GitGuardian alert
- Add generate-test-certs.sh to create certificates dynamically
- Update CI workflow to generate certs before running tests
- Update .gitignore to exclude all generated certificate files

--- a/tests/fixtures/ssl/.gitignore
+++ b/tests/fixtures/ssl/.gitignore
@@ -1,6 +1,7 @@
-# Ignore certificate signing requests and serial files
+# All generated certificate files - generated dynamically in CI/CD
+*.pem
 *.srl
 *.csr
 
-# Test certificates are committed for CI/CD
-# These are NOT real certificates - safe to commit
+# Only the generation script is committed
+!generate-test-certs.sh
