ci: add SSL certificate generation to publish workflow
Generate test SSL certificates before running tests in PyPI publish
workflow to fix test failures for SSL integration tests.

--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -23,6 +23,8 @@ jobs:
           uv venv
           source .venv/bin/activate
           uv pip install -e .[test]
+      - name: Generate test SSL certificates
+        run: bash tests/fixtures/ssl/generate-test-certs.sh
       - name: Run tests
         run: |
           source .venv/bin/activate
