--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -7,7 +7,7 @@ on:
 
   push:
     branches:
-      - main
+      - master
       - develop
       - feature/*
       - release/*
@@ -56,7 +56,7 @@ jobs:
           echo "percentage=$COVERAGE" >> $GITHUB_OUTPUT
           echo "Coverage: $COVERAGE%"
       - name: Update coverage badge
-        if: matrix.python-version == '3.13' && github.ref == 'refs/heads/main'
+        if: matrix.python-version == '3.13' && github.ref == 'refs/heads/master'
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.GIST_TOKEN }}
