docs: add required custom-field env vars to env templates

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,11 @@ CLEANUP_INTERVAL_MINUTES=10
 # Default expiry time for downloaded attachments (in minutes)
 ATTACHMENT_EXPIRES_MINUTES=60
 
+# Required custom field autofill (optional)
+# Retries once on relevant create/update validation errors (blank/invalid custom fields)
+# REDMINE_AUTOFILL_REQUIRED_CUSTOM_FIELDS=false
+# REDMINE_REQUIRED_CUSTOM_FIELD_DEFAULTS={}
+
 # SSL Certificate Configuration (Optional)
 # Enable/disable SSL certificate verification (default: true)
 # WARNING: Only set to false for development/testing environments!
